force-app/main/default/objects/Account/fields/Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Name__c</fullName>
    <label>Alternate Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>